k8s/k3s/ingress-test/apache-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache-hello-service
  labels:
    run: apache-hello
spec:
  selector:
    app: apache-hello
  ports:
    - protocol: TCP
      port: 80
